DCS-271: New navigation buttons http://localhost:3000/hdc/pdf/taskList/{bookingId} http://localhost:3000/hdc/send/approval/{bookingId} CA can now hand-off case back to DM even though the DM has previously APPROVED the release. The re-referral is required in light iof new information. It is assumed the CA and DM have already discussed the case and have agreed the need for the re-referral. The new navigation buttons appear in /hdc/pdf/taskList/ and /hdc/send/approval/ but only if the case stage is DECIDED or MODIFIED

--- a/server/views/pdf/createLicenceTaskList.pug
+++ b/server/views/pdf/createLicenceTaskList.pug
@@ -33,4 +33,6 @@ block content
     div.paddingTop
       include ../includes/caseListReturn
 
-
+    if reSubmitToDm
+      div.paddingTop
+       include ../includes/backToDm
