--- a/server/views/send/includes/sendButtons.pug
+++ b/server/views/send/includes/sendButtons.pug
@@ -1,3 +1,6 @@
 div.pure-u-1.inlineButtons.paddingBottom
   input#continueBtn.requiredButton.button.button-start.midMarginBottom(type="submit" value="Submit")
-  a#backBtn.requiredButton.button.button-secondary.button-start-height(href="/hdc/taskList/" + bookingId role="button") Return to task list
+  if reReferralToDm
+    a#backToPrint.requiredButton.button.button-secondary.button-start-height(href="/hdc/pdf/taskList/" + bookingId role="button") Return to printing licence
+  else 
+    a#backBtn.requiredButton.button.button-secondary.button-start-height(href="/hdc/taskList/" + bookingId role="button") Return to task list
