--- a/server/views/sent/caToDm.pug
+++ b/server/views/sent/caToDm.pug
@@ -3,5 +3,7 @@ extends ../layout
 block content
 
   include ./mixins/sentMixin
-
-  +sentContent('Submitted for approval')
+  if reReferToDm
+    +sentContent('Submitted for reconsideration')
+  else
+    +sentContent('Submitted for approval')
