DCS-271 - update GEB and Jest tests
1. New GEB tests for CA Tasklist and for the Send and Sent pages

2. use of data-qa attr for CA tasklist buttons

Data-qa attr added for more precise targeting of page elements during the GEB tests.

The CA tasklist uses buttons and links whose attributes are dynamically generated in server/routes/viewModels/taskLists/tasks/utils/actions.js, rather than being directly added in thepug templates.

3. Jest integration tests updated to take into account the dataQa value being returned.

--- a/server/views/taskList/vary/standardTask.pug
+++ b/server/views/taskList/vary/standardTask.pug
@@ -20,16 +20,16 @@ mixin action(actionConfig)
   - var link = actionConfig.href.charAt(actionConfig.href.length - 1) === '/' ? actionConfig.href + prisonerInfo.bookingId : actionConfig.href
 
   if isLink
-    a.taskListAction(href=link, target=target) #{actionConfig.text}
+    a.taskListAction(href=link, target=target, data-qa=actionConfig.dataQa) #{actionConfig.text}
 
   else if isButton
-    a.taskListAction.center.button(href=link, target=target) #{actionConfig.text}
+    a.taskListAction.center.button(href=link, target=target, data-qa=actionConfig.dataQa) #{actionConfig.text}
 
   else if isSecondaryButton
-    a.taskListAction.center.button.button-secondary(href=link, target=target) #{actionConfig.text}
+    a.taskListAction.center.button.button-secondary(href=link, target=target, data-qa=actionConfig.dataQa) #{actionConfig.text}
   
   else if isDisabledButton
-    a.taskListAction.center.button.button-disabled(disabled) #{actionConfig.text}
+    a.taskListAction.center.button.button-disabled(disabled, data-qa=actionConfig.dataQa) #{actionConfig.text}
 
 mixin label(text)
   - var sections = text.split('||')
