--- a/server/views/licences/hdc_ap_pss.pug
+++ b/server/views/licences/hdc_ap_pss.pug
@@ -112,10 +112,33 @@ block content
 
   p You are being released under the provisions of Chapter 6 of the Criminal Justice Act 2003.
 
-  p
-    | You are being released subject to the licence period of a 12 months or longer sentence followed by a
-    | post-sentence supervision period.
+  div.grid-container
+    div.grid-item
+      p.checkbox
+    div.grid-item.border-left-none 
+      | You are being released subject to the licence period of a 12 months or longer sentence followed by a
+      | post-sentence supervision period.
 
-  p
+    div.grid-item.border-top-none
+      p.checkbox
+    div.grid-item.border-left-none.border-top-none 
+      | You are being released subject to the licence period of an under 12 month sentence followed by a
+      | post-sentence supervision period.
+    
+    div.grid-item.border-top-none
+      p.checkbox.checkbox-margin-top
+    div.grid-item.border-left-none.border-top-none
+      | You are being released subject to the licence period of both a 12 month or longer 
+      | sentence and one or more under 12 month sentences(s) followed by a post-sentence
+      | supervision period.
+
+      p
+        | The licence period of your under 12 month sentence(s) expires on __________
+      p
+        | Your under 12 month sentence(s) expires on __________
+      p
+        | Your 12 month sentence(s) expires on __________
+
+  p.extraLargePaddingBottom
     | Your release is also subject to the conditions specified on your licence, all of which have been imposed in
     | accordance with Chapter 6 of the Act.
