DCS-420 change to css naming following PR

--- a/server/views/licences/vary_hdc_ap_pss.pug
+++ b/server/views/licences/vary_hdc_ap_pss.pug
@@ -132,7 +132,7 @@ block content
       p
         | Your 12 month sentence(s) expires on __________
 
-  p.extraLargePaddingBottom
+  p.extra-large-padding-bottom
     | Your release is also subject to the conditions specified on your licence, all of which have been imposed in
     | accordance with Chapter 6 of the Act.
 
