--- a/server/views/licences/hdc_ap_pss.pug
+++ b/server/views/licences/hdc_ap_pss.pug
@@ -139,6 +139,6 @@ block content
       p
         | Your 12 month sentence(s) expires on __________
 
-  p.extraLargePaddingBottom
+  p.extra-large-padding-bottom
     | Your release is also subject to the conditions specified on your licence, all of which have been imposed in
     | accordance with Chapter 6 of the Act.
