Dcs 420 text at the bottom of licence changed to checkboxes (#1136)
* DCS-420 PSS licence displays checkbox options

The HDC AP PSS (aka basic licence with top up supervision) licence requires 3 rather than 1 option with a faux checkbox input attached to each one. The user is not able to actually select the checkbox - it is for PDF output only.

* DCS-420: Vary version of hdc app pss updated to display release options just as in the non vary version

* DCS-420 change to css naming following PR

Co-authored-by: G <gurnank@outlook.com>

--- a/assets/sass/licences-pdf.scss
+++ b/assets/sass/licences-pdf.scss
@@ -183,7 +183,40 @@ img {
   padding-bottom: 50px;
 }
 
+.extra-large-padding-bottom {
+  padding-bottom: 150px;
+}
+
 .box {
   border: 1px solid grey;
   padding: 10px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 20% auto;
+}
+
+.grid-item {
+  border: 1px solid grey;
+  padding: 20px;
+}
+
+.checkbox {
+  height: 25px;
+  width: 25px;
+  border: solid black 1px;
+  margin: auto
+}
+
+.checkbox-margin-top {
+  margin-top: 60px
+}
+
+.border-left-none {
+	border-left: none;
+}
+
+.border-top-none {
+	border-top: none
 }
