DCS-411: CA can view the DMs HDC decision comments The comments appear only after the DM had made a decision providing the decision is a refusal. The comments appear in the orange bordered box at the top of the CA tasklist.

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -300,6 +300,10 @@ $path: "/public/images/";
     text-align: right;
 }
 
+.alignLeft {
+    text-align: left;
+}
+
 .marginTopMedium {
     margin-top: 1em;
 }
