--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -25,7 +25,12 @@ block content
       strong.bold The offender is presumed unsuitable for HDC release
   else if user.role != 'DM' && licenceStatus.decisions.refused
     div.error-banner.marginTopMedium
-      strong.bold Home detention curfew refused - #{licenceStatus.decisions.refusalReason}
+      details.govuk-details.alignLeft(data-module="govuk-details")
+       summary.govuk-details__summary
+         span.govuk-details__summary-text
+          strong.bold Home detention curfew refused - #{licenceStatus.decisions.refusalReason}
+       div.govuk-details__text
+       | #{licenceStatus.decisions.decisionComments}
   else if licenceStatus.decisions.optedOut
     div.error-banner.marginTopMedium
       strong.bold The offender has opted out from Home Detention Curfew
