--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -23,14 +23,20 @@ block content
   else if licenceStatus.decisions.unsuitableResult
     div.error-banner.marginTopMedium
       strong.bold The offender is presumed unsuitable for HDC release
-  else if user.role != 'DM' && licenceStatus.decisions.refused
+  else if user.role === 'CA' && licenceStatus.decisions.caRefused
+    div.error-banner.marginTopMedium
+      strong.bold Home detention curfew refused by Case Admin - #{licenceStatus.decisions.refusalReason}
+  else if user.role === 'CA' && licenceStatus.decisions.refused && licenceStatus.decisions.decisionComments
     div.error-banner.marginTopMedium
       details.govuk-details.alignLeft(data-module="govuk-details")
        summary.govuk-details__summary
          span.govuk-details__summary-text
-          strong.bold Home detention curfew refused - #{licenceStatus.decisions.refusalReason}
+          strong.bold Home detention curfew refused by Decision Maker - #{licenceStatus.decisions.refusalReason}
        div.govuk-details__text
        | #{licenceStatus.decisions.decisionComments}
+  else if user.role === 'CA' && licenceStatus.decisions.refused 
+    div.error-banner.marginTopMedium
+      strong.bold Home detention curfew refused by Decision Maker - #{licenceStatus.decisions.refusalReason}
   else if licenceStatus.decisions.optedOut
     div.error-banner.marginTopMedium
       strong.bold The offender has opted out from Home Detention Curfew
