--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -25,18 +25,18 @@ block content
       strong.bold The offender is presumed unsuitable for HDC release
   else if user.role === 'CA' && licenceStatus.decisions.caRefused
     div.error-banner.marginTopMedium
-      strong.bold Home detention curfew refused by prison case admin - #{licenceStatus.decisions.refusalReason}
+      strong.bold Home detention curfew refused by prison case admin: #{licenceStatus.decisions.refusalReason}
   else if user.role === 'CA' && licenceStatus.decisions.refused && licenceStatus.decisions.decisionComments
     div.error-banner.marginTopMedium
       details.govuk-details.alignLeft(data-module="govuk-details")
        summary.govuk-details__summary
          span.govuk-details__summary-text
-          strong.bold Home detention curfew refused by decision maker - #{licenceStatus.decisions.refusalReason}
-       div.govuk-details__text
+          strong.bold Home detention curfew refused by decision maker: #{licenceStatus.decisions.refusalReason}
+       div.govuk-details__text.marginTopMedium
        | #{licenceStatus.decisions.decisionComments}
   else if user.role === 'CA' && licenceStatus.decisions.refused 
     div.error-banner.marginTopMedium
-      strong.bold Home detention curfew refused by decision maker - #{licenceStatus.decisions.refusalReason}
+      strong.bold Home detention curfew refused by decision maker: #{licenceStatus.decisions.refusalReason}
   else if licenceStatus.decisions.optedOut
     div.error-banner.marginTopMedium
       strong.bold The offender has opted out from Home Detention Curfew
