DCS-253 Admin UI for FMBs

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -19,3 +19,5 @@ block content
         a(href='/admin/locations/probation-areas') Manage locations
       div
         a(href='/admin/licenceSearch') Search for licence
+      div
+        a(href='/admin/functionalMailboxes/probationAreas') Manage functional mailboxes
