--- a/server/views/admin/functionalMailboxes/lduWithTeams.pug
+++ b/server/views/admin/functionalMailboxes/lduWithTeams.pug
@@ -5,33 +5,53 @@ block content
   div.back-link-container.smallPaddingTop
     a#back.link-back(href="/admin/functionalMailboxes/probationAreas/" + probationAreaCode + "/ldus") Back
 
+  if errors && errors.length > 0
+    div.largeMarginBottom
+      div.error-summary(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
+        h2.heading-medium.error-summary-heading.center.noMargin.smallPaddingTopBottom
+          | There is a problem
+        ul.error-summary-list
+          each error in errors
+            li.error #{error.message}
 
   h2.heading-medium LDU
-  div.pure-g.borderBottom
-    div.pure-u-1.pure-u-md-1-2
+  div.pure-g.borderBottom.paddingBottom
+    div.pure-u-1.pure-u-md-1-3.midMarginBottom
       p
         span.bold Probation Area:&nbsp;
         span #{probationAreaCode}
       p
         span.bold LDU:&nbsp;
         span #{description} (#{lduCode})
-      p
-        span.bold Functional Mailbox:&nbsp;
-        span #{functionalMailbox}
 
-  h2.heading-medium Probation Teams
-  table.largeMarginBottom
-    thead
-      tr
-      th Description
-      th Code
-      th Functional Mailbox
-    tbody
-      each team in lduWithTeams.probationTeams
-        tr
-        td
-          | #{team.description}
-        td
-          | #{team.code}
-        td
-          | #{team.functionalMailbox}
+      form(method="post").largeMarginTop
+        input(type="hidden" name="_csrf" value=csrfToken)
+
+        div.form-group
+          label.form-label(for="functionalMailbox") Functional Mailbox
+            input.form-control.smallMarginTop(id="functionalMailbox" type="text" name="functionalMailbox" value=functionalMailbox)
+        div.inlineButtons
+          input.requiredButton.button(type="submit" value="Update")
+          a.requiredButton.button.button-secondary(href="/admin/functionalMailboxes/probationAreas/" + probationAreaCode + "/ldus") Cancel
+
+  div.pure-g.paddingTop
+    div.pure-u-1
+      if probationTeams[0]
+        h2.heading-medium Probation Teams
+        table.largeMarginBottom
+          thead
+            tr
+            th Description
+            th Code
+            th Functional Mailbox
+          tbody
+            each team in probationTeams
+              tr
+              td
+                | #{team.description}
+              td
+                | #{team.code}
+              td
+                | #{team.functionalMailbox}
+      else
+        h2.heading-medium No Probation Teams
