--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -23,9 +23,12 @@ block content
   else if licenceStatus.decisions.unsuitableResult
     div.error-banner.marginTopMedium
       strong.bold The offender is presumed unsuitable for HDC release
-  else if user.role === 'CA' && licenceStatus.decisions.caRefused
+  else if user.role === 'CA' && licenceStatus.decisions.caRefused && licenceStatus.decisions.refusalReason
     div.error-banner.marginTopMedium
       strong.bold Home detention curfew refused by prison case admin: #{licenceStatus.decisions.refusalReason}
+  else if user.role === 'CA' && licenceStatus.decisions.caRefused && !licenceStatus.decisions.refusalReason
+    div.error-banner.marginTopMedium
+      strong.bold Home detention curfew refused by prison case admin
   else if user.role === 'CA' && licenceStatus.decisions.refused && licenceStatus.decisions.decisionComments
     div.error-banner.marginTopMedium
       details.govuk-details.alignLeft(data-module="govuk-details")
