DCS-411: changes to HDC refusal message (#1163)
* DCS-411: changes to HDC refusal message
This is temporary fix for a bub. There may be occassions when a CA only partly completes the HDC refusal task. In these cases the message will display a colon with nothing to its right hand side. Fix implemented to remove the colon if there is no reason provided for CA's HDC refusal.

* DCS-411: code refactor following PR comments

Co-authored-by: G <gurnank@outlook.com>

--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -25,7 +25,7 @@ block content
       strong.bold The offender is presumed unsuitable for HDC release
   else if user.role === 'CA' && licenceStatus.decisions.caRefused
     div.error-banner.marginTopMedium
-      strong.bold Home detention curfew refused by prison case admin: #{licenceStatus.decisions.refusalReason}
+      strong.bold Home detention curfew refused by prison case admin#{licenceStatus.decisions.refusalReason ?': ' + licenceStatus.decisions.refusalReason : ''}
   else if user.role === 'CA' && licenceStatus.decisions.refused && licenceStatus.decisions.decisionComments
     div.error-banner.marginTopMedium
       details.govuk-details.alignLeft(data-module="govuk-details")
