DCS-419 Adding exit to DPS links at top and bottom of caselist and to the admin page

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -19,3 +19,6 @@ block content
         a(href='/admin/locations/probation-areas') Manage locations
       div
         a(href='/admin/licenceSearch') Search for licence
+
+      div.pure-u-1.sm-padTop55
+        a.link(href=exitUrl data-qa='exit-to-dps-link') Exit to Digital Prison Services
