DCS-419 Adding exit to DPS links at top and bottom of caselist and to the admin page (#1172)

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -21,3 +21,6 @@ block content
         a(href='/admin/licenceSearch') Search for licence
       div
         a(href='/admin/functionalMailboxes/probationAreas') Manage functional mailboxes
+
+      div.pure-u-1.sm-padTop55
+        a.link(href=exitUrl data-qa='exit-to-dps-link') Exit to Digital Prison Services
