DCS-479 DM caselist: Show all cases that have been sent to DM or are with PCA after being sent to DM. This corresponds with cases in stage APPROVAL, DECIDED, MODIFIED or MODIFIED_APPROVAL.

--- a/server/views/caseList/DMTable.pug
+++ b/server/views/caseList/DMTable.pug
@@ -36,12 +36,16 @@ table#hdcEligiblePrisoners.largeMarginBottom
           td
             -var label = labels.dm[prisoner.status] || 'View'
 
-            if ['APPROVAL', 'DECIDED'].includes(prisoner.stage)
+            if ['APPROVAL'].includes(prisoner.stage)
               -var path ="/hdc/taskList/" + prisoner.bookingId
               if ['Start now'].includes(label)
                 a.button.button-primary.fullWidth.center(href=path role="button") #{label}
               else
                 a.button.button-secondary.fullWidth.center(href=path role="button") #{label}
+
+            else if ['DECIDED', 'MODIFIED', 'MODIFIED_APPROVAL'].includes(prisoner.stage)
+              -var path = "/hdc/review/licence/" + prisoner.bookingId
+              a.button.button-secondary.fullWidth.center(href=path role="button") #{label}
 
 if !hdcEligible || hdcEligible.length === 0
   p No HDC cases
