--- a/server/views/finalChecks/refuse.pug
+++ b/server/views/finalChecks/refuse.pug
@@ -17,17 +17,20 @@ block content
   form(method="post")
     input(type="hidden" name="_csrf" value=csrfToken)
     input(type="hidden" name="bookingId" value=bookingId || '')
-    //- input(type="hidden" name="reason" value=reason)
-    //- input(type="hidden" name="outOfTimeReasons" value=outOfTimeReasons)
 
     div#decisionForm(class=errorObject.decision ? 'form-group-error': 'smallPaddingTop form-group')
+      if errorObject.decision 
+        p#decision-error(class="error tinyPaddingBottom") Select Yes or No
+
       div.multiple-choice(data-target="reasonForm")
         input#decision(type="radio" checked=decisionValue === 'Yes' name="decision" value="Yes")
-        label(for="yes") Yes
+        label(for="decision") Yes
         
       div#reasonForm(class=errorObject.reason ? 'form-group-error panel': 'js-hidden panel')
         div.form-group
           p Select a reason why you are refusing HDC for this offender
+          if errorObject.reason 
+            p#outOfTimeReasons-error(class="error tinyPaddingBottom") Select a reason for refusing HDC
 
           div.multiple-choice
             input#reason(type="radio" checked=reasonValue === 'addressUnsuitable' name="reason" value="addressUnsuitable")
@@ -39,20 +42,23 @@ block content
 
         div#outOfTimeForm(class=errorObject.outOfTimeReasons ? 'form-group-error panel': 'js-hidden panel')
           div.pure-u-1
+            if errorObject.outOfTimeReasons 
+              p#outOfTimeReasons-error(class="error tinyPaddingBottom") Select reason(s) for Out of time
+
             div.multiple-choice
-              input(type='checkbox' name='outOfTimeReasons' id='outOfTimeReasons' value='underInvestigation' checked=outOfTimeReasonsValue.indexOf('underInvestigation') !== -1)
-              label(for='underInvestigation') The offender is currently under investigation for an offence committed during the current sentence and has been referred to the police/Independent Adjudicator
+              input(type='checkbox' name='outOfTimeReasons[]' id='outOfTimeReasons' value='underInvestigation' checked=outOfTimeReasonsValue.indexOf('underInvestigation') !== -1)
+              label(for='outOfTimeReasons') The offender is currently under investigation for an offence committed during the current sentence and has been referred to the police/Independent Adjudicator
             
             div.multiple-choice
-              input(type='checkbox' name='outOfTimeReasons' id='confiscationOrder' value='confiscationOrder' checked=outOfTimeReasonsValue.indexOf('confiscationOrder') !== -1)
+              input(type='checkbox' name='outOfTimeReasons[]' id='confiscationOrder' value='confiscationOrder' checked=outOfTimeReasonsValue.indexOf('confiscationOrder') !== -1)
               label(for='confiscationOrder') The offender is subject to a confiscation order and the relevant authority has advised that HDC should not progress
             
             div.multiple-choice
-              input(type='checkbox' name='outOfTimeReasons' id='onRemand' value='onRemand' checked=outOfTimeReasonsValue.indexOf('onRemand') !== -1)
+              input(type='checkbox' name='outOfTimeReasons[]' id='onRemand' value='onRemand' checked=outOfTimeReasonsValue.indexOf('onRemand') !== -1)
               label(for='onRemand') The offender is currently on remand
             
             div.multiple-choice
-              input(type='checkbox' name='outOfTimeReasons' id='riskManagement' value='riskManagement' checked=outOfTimeReasonsValue.indexOf('riskManagement') !== -1)
+              input(type='checkbox' name='outOfTimeReasons[]' id='riskManagement' value='riskManagement' checked=outOfTimeReasonsValue.indexOf('riskManagement') !== -1)
               label(for='riskManagement') There are unresolved risk management issues
 
       div.multiple-choice
