--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -45,7 +45,7 @@ table#hdcEligiblePrisoners.caSortcolumns.largeMarginBottom
             if (user.role === 'PRISON')
               if (label !== 'Start now')
                 -var path = "/hdc/review/licence/" + prisoner.bookingId
-                a.button.button-secondary.fullWidth.center(href=path role="button") 'View'
+                a.button.button-secondary.fullWidth.center(href=path role="button") View
 
             else if ['UNSTARTED', 'ELIGIBILITY', 'PROCESSING_CA', 'DECIDED', 'MODIFIED', 'MODIFIED_APPROVAL'].includes(prisoner.stage)
               -var path = "/hdc/taskList/" + prisoner.bookingId
