DCS-369: Refactor following PR comments

--- a/server/views/licenceConditions/standard.pug
+++ b/server/views/licenceConditions/standard.pug
@@ -1,12 +1,11 @@
 extends ../layout
 
-block content
-
-  - var additionalConditionsValue = data.additionalConditionsRequired || null;
-  - var licenceConditions = licenceWithReconstructedConditions.licenceConditions || {}
-
+block content 
+  include ./includes/additionalConditions
   include ../includes/backToTaskList
   include ../includes/personalDetailsSummary
+  
+  - var additionalConditionsValue = additionalConditionsRequired || null;
 
   h1.heading-large Standard licence conditions
 
@@ -17,53 +16,12 @@ block content
       p An offender must:
 
       ol.numberedList
-        for condition in conditions
+        for condition in standardConditions
           li.midPaddingBottom #{condition.text}
 
-
-  h2.heading-large Additional conditions
-  div.pure-u-1.pure-u-md-2-3
-    - var results = false
-    ol.numberedList
-      for condition in licenceConditions
-          if condition.group !== undefined && condition.group !== 'Post-sentence supervision only' && condition.group !== 'Bespoke'
-            - results = true
-              li.midPaddingBottom 
-                for item in condition.content
-                  span  #{item.text}
-                  if item.variable
-                    span #{item.variable}
-    if results === false
-      | No additional conditions selected
-
-  h2.heading-large Post sentence supervision conditions
-  div.pure-u-1.pure-u-md-2-3
-    - var results = false
-    ol.numberedList
-      for condition in licenceConditions
-          if condition.group === 'Post-sentence supervision only' && condition.group === 'Post-sentence supervision only'
-            - results = true
-              li.midPaddingBottom 
-                for item in condition.content
-                  span  #{item.text}
-                  if item.variable
-                    span #{item.variable}
-    if results === false
-      | No post sentence supervision conditions selected
-        
-
-  h2.heading-large Bespoke conditions
-  div.pure-u-1.pure-u-md-2-3
-    - var results = false
-    ol.numberedList
-      for condition in licenceConditions
-          if condition.group === 'Bespoke' && condition.approved === 'Yes'
-            - results = true
-            li.midPaddingBottom
-              for item in condition.content
-                span  #{item.text}
-    if results === false
-      | No bespoke conditions selected
+  +additionalConditions('Additional conditions', additionalConditions, 'additional')
+  +additionalConditions('Post sentence supervision conditions', pssConditions, 'post sentence supervision')
+  +additionalConditions('Bespoke conditions', bespokeConditions, 'bespoke')
 
 
   form(method="post")
