DCS-317 Read-only access for prison staff who do not have the CA, DM or RO role. Use LICENCE_READONLY role instead of PRISON.
DCS-317 Read-only access for prison staff who do not have the CA, DM or RO role. Use LICENCE_READONLY role instead of PRISON.

DCS-317 Read-only access for prison staff who do not have the CA, DM or RO role. Use LICENCE_READONLY role instead of PRISON.

DCS-317 Read-only access for prison staff who do not have the CA, DM or RO role. Use LICENCE_READONLY role instead of PRISON.

DCS-317 Read-only access for prison staff who do not have the CA, DM or RO role. Use LICENCE_READONLY role instead of PRISON.

DCS-317 Read-only access for prison staff who do not have the CA, DM or RO role. Use LICENCE_READONLY role instead of PRISON.

DCS-317 Read-only access for prison staff who do not have the CA, DM or RO role. Use LICENCE_READONLY role instead of PRISON.

DCS-317 Read-only access for prison staff who do not have the CA, DM or RO role. Use LICENCE_READONLY role instead of PRISON.

DCS-317 Read-only access for prison staff who do not have the CA, DM or RO role. Use LICENCE_READONLY role instead of PRISON.

DCS-317 Read-only access for prison staff who do not have the CA, DM or RO role. Use LICENCE_READONLY role instead of PRISON.

--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -42,7 +42,7 @@ table#hdcEligiblePrisoners.caSortcolumns.largeMarginBottom
           td
             -var label = labels.ca[prisoner.status] || 'View'
 
-            if (user.role === 'PRISON')
+            if (user.role === 'READONLY')
               if (label !== 'Start now')
                 -var path = "/hdc/review/licence/" + prisoner.bookingId
                 a.button.button-secondary.fullWidth.center(href=path role="button") View
