--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -23,7 +23,7 @@ block content
             li(class=tab === 'inactive' ? 'selected' : undefined)
               a(href="/caseList/inactive") Inactive
 
-      if (user.role === 'CA' || user.role === 'PRISON')
+      if (user.role === 'CA' || user.role === 'READONLY')
         include ./CATable
 
       if user.role === 'RO'
