--- a/server/views/admin/users/roUserDetails.pug
+++ b/server/views/admin/users/roUserDetails.pug
@@ -29,6 +29,10 @@ block content
           div.form-group
             label.form-label(for="nomisId") Nomis Username
             input#nomisId.form-control(name="nomisId" type="text" value=inputs.nomisId)
+        div.pure-u-1.pure-u-md-4-5
+          div.form-group
+            label.form-label(for="deliusUsername") Delius Username
+            input#nomisId.form-control(name="deliusUsername" type="text" value=inputs.deliusUsername)
 
       div.pure-u-1.pure-u-md-2-5
         div.pure-u-1.pure-u-md-4-5
