DCS-613 Adding screens to allow app support to manage users HDC specific delius roles

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -14,6 +14,8 @@ block content
       div
         a(href='/admin/delius') Delius API search
       div
+        a(href='/admin/manage-roles') Manage delius roles
+      div
         a(href='/admin/warnings/outstanding') View Warnings
       div
         a(href='/admin/locations/probation-areas') Manage locations
