--- a/server/views/admin/manageRoles/index.pug
+++ b/server/views/admin/manageRoles/index.pug
@@ -4,14 +4,14 @@ include ../../includes/errorBannerWithDetail
 block content
 
   div.back-link-container.smallPaddingTop
-    a#back.link-back(href="javascript: window.history.back();") Back
+    a#back.link-back(href="/admin") Back
   +errorBannerWithDetail(errors, [
     { field: 'deliusUsername' }
   ])
 
   h2.heading-large
     | View roles for Delius username
-    
+
   div.pure-g.largePaddingBottom
       div.pure-u-1-2
         div
