DCS-635 small cosmetic improvements to improve usability of manage functional mailboxes for admins

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -453,3 +453,5 @@ input[type="time"] {
   @extend %container-shared;
   background-color: $mellow-red-25;
 }
+
+.default-text { color: $grey-1; font-style: italic; }
